[gd_scene load_steps=56 format=3 uid="uid://cljy1b7veobwy"]

[ext_resource type="Script" uid="uid://cslwxbfk86sr1" path="res://Mobs/mushroom.gd" id="1_selrt"]
[ext_resource type="Texture2D" uid="uid://c8hohr12ixjpl" path="res://Monsters_Creatures_Fantasy/Mushroom/Attack.png" id="1_sjuu0"]
[ext_resource type="Texture2D" uid="uid://ds2dqtbwymje3" path="res://Monsters_Creatures_Fantasy/Mushroom/Take Hit.png" id="2_selrt"]
[ext_resource type="Texture2D" uid="uid://br0lv8u6o5e65" path="res://Monsters_Creatures_Fantasy/Mushroom/Death.png" id="3_ufykn"]
[ext_resource type="Texture2D" uid="uid://defhoko2en253" path="res://Monsters_Creatures_Fantasy/Mushroom/Idle.png" id="4_xshu0"]
[ext_resource type="Texture2D" uid="uid://hw25v3mx3xfa" path="res://Monsters_Creatures_Fantasy/Mushroom/Run.png" id="5_3ua80"]
[ext_resource type="PackedScene" uid="uid://cii1ug68ecub2" path="res://scn/DamageBox/damage_box.tscn" id="7_ufykn"]
[ext_resource type="PackedScene" uid="uid://dg2ng3p2c75ks" path="res://Mobs/mob_health.tscn" id="8_xshu0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_768lt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_18fl2"]
atlas = ExtResource("1_sjuu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pmuh"]
atlas = ExtResource("1_sjuu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qisqa"]
atlas = ExtResource("1_sjuu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2aqh"]
atlas = ExtResource("1_sjuu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwrmq"]
atlas = ExtResource("1_sjuu0")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n63ap"]
atlas = ExtResource("1_sjuu0")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdset"]
atlas = ExtResource("1_sjuu0")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4do7c"]
atlas = ExtResource("1_sjuu0")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd7ou"]
atlas = ExtResource("2_selrt")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_boqqp"]
atlas = ExtResource("2_selrt")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_042yf"]
atlas = ExtResource("2_selrt")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaqq0"]
atlas = ExtResource("2_selrt")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3cwd"]
atlas = ExtResource("3_ufykn")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_s16me"]
atlas = ExtResource("3_ufykn")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_scx5s"]
atlas = ExtResource("3_ufykn")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvb25"]
atlas = ExtResource("3_ufykn")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_21rlh"]
atlas = ExtResource("4_xshu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq0nx"]
atlas = ExtResource("4_xshu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oovh"]
atlas = ExtResource("4_xshu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m46rv"]
atlas = ExtResource("4_xshu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufykn"]
atlas = ExtResource("4_xshu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xshu0"]
atlas = ExtResource("4_xshu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ua80"]
atlas = ExtResource("4_xshu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_768lt"]
atlas = ExtResource("4_xshu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq103"]
atlas = ExtResource("4_xshu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5wbd"]
atlas = ExtResource("4_xshu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7486l"]
atlas = ExtResource("4_xshu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumnj"]
atlas = ExtResource("4_xshu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmmnp"]
atlas = ExtResource("5_3ua80")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8x60"]
atlas = ExtResource("5_3ua80")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf87a"]
atlas = ExtResource("5_3ua80")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb6yt"]
atlas = ExtResource("5_3ua80")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_av1p8"]
atlas = ExtResource("5_3ua80")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_st1g1"]
atlas = ExtResource("5_3ua80")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvy4u"]
atlas = ExtResource("5_3ua80")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2wlo"]
atlas = ExtResource("5_3ua80")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_jq103"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18fl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pmuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qisqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2aqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwrmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n63ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdset")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4do7c")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd7ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boqqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_042yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaqq0")
}],
"loop": false,
"name": &"Damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3cwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s16me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scx5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvb25")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21rlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq0nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oovh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m46rv")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufykn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xshu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ua80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_768lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq103")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5wbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7486l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumnj")
}],
"loop": false,
"name": &"Recover",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmmnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8x60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf87a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb6yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av1p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st1g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvy4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2wlo")
}],
"loop": false,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_ufykn"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_xshu0"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3ua80"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_768lt"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8pmuh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qisqa"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_18fl2"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qisqa"]
_data = {
&"Attack": SubResource("Animation_ufykn"),
&"Damage": SubResource("Animation_xshu0"),
&"Death": SubResource("Animation_3ua80"),
&"Idle": SubResource("Animation_768lt"),
&"RESET": SubResource("Animation_8pmuh"),
&"Recover": SubResource("Animation_qisqa"),
&"Run": SubResource("Animation_18fl2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_selrt"]
size = Vector2(18, 16)

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_selrt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_768lt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -7)
scale = Vector2(0.853333, 0.84)
sprite_frames = SubResource("SpriteFrames_jq103")
animation = &"Run"
autoplay = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qisqa")
}
autoplay = "Idle"

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(14, 2)
shape = SubResource("RectangleShape2D_selrt")

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("7_ufykn")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox" index="0"]
position = Vector2(0, 3)

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(16, 2)

[node name="MobHealth" parent="." instance=ExtResource("8_xshu0")]
position = Vector2(0, -20)
scale = Vector2(0.15, 0.15)

[node name="run" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HurtBox" to="MobHealth" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="damage_received" from="MobHealth" to="." method="_on_mob_health_damage_received"]
[connection signal="no_health" from="MobHealth" to="." method="_on_mob_health_no_health"]
[connection signal="timeout" from="run" to="." method="_on_run_timeout"]

[editable path="AttackDirection/DamageBox"]
